[package]
name = "mwcas"
version = "0.2.0"
authors = ["Igor Skokov"]
edition = "2018"
license = "MIT"
readme = "README.md"
repository = "https://github.com/Lagrang/mwcas"
documentation = "https://docs.rs/mwcas"
description = "Multi-word CAS primitive."
keywords = ["cas", "concurrency", "multi-word"]
categories = ["concurrency"]
include = ["src/", "LICENSE", "README.md", "CHANGELOG.md"]

[dependencies]
crossbeam-epoch = "0.9.4"

[dev-dependencies]
crossbeam-utils = "0.8.4"
num_cpus = "1.11.1"
rand = "0.8.3"
criterion = "0.3.4"

[[bench]]
name = "mwcas_bench"
path = "benches/bench.rs"
harness = false
